SSM-3316: fixed by enabling / disabling the allowed http methods label when double submit cookies is enabled / disabled.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28469 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
@@ -55,7 +55,7 @@
                   <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="cookieName"/>
                 </properties>
               </component>
-              <component id="ba6ec" class="javax.swing.JLabel" binding="parameterNameLabel">
+              <component id="ba6ec" class="javax.swing.JLabel" binding="httpParameterNameLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -95,7 +95,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="261c" class="javax.swing.JLabel">
+              <component id="261c" class="javax.swing.JLabel" binding="allowedHttpMethodsLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
