--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="24" y="16" width="814" height="460"/>
+      <xy x="24" y="16" width="870" height="401"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -58,7 +58,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="3ad9c" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3ad9c" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="12" left="12" bottom="12" right="12"/>
             <constraints>
               <tabbedpane title="Basic Settings"/>
@@ -149,10 +149,10 @@
                   </component>
                 </children>
               </grid>
-              <grid id="c2eef" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="c2eef" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="12" bottom="12" right="12"/>
                 <constraints>
-                  <grid row="0" column="2" row-span="4" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="1" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="etched" title="Enabled Features"/>
@@ -174,7 +174,7 @@
                     <properties>
                       <enabled value="true"/>
                       <selected value="true"/>
-                      <text value="Built-in &amp;services"/>
+                      <text value="B&amp;uilt-in services"/>
                     </properties>
                   </component>
                   <component id="3d65b" class="javax.swing.JCheckBox" binding="cbEnableSsmRemote" default-binding="true">
@@ -199,7 +199,7 @@
                   </component>
                   <component id="5ecf1" class="javax.swing.JCheckBox" binding="cbEnableNode">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
@@ -208,18 +208,27 @@
                   </component>
                   <component id="872b8" class="javax.swing.JCheckBox" binding="cbEnablePCAPI">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
                       <text value="Node Contro&amp;l"/>
                     </properties>
                   </component>
+                  <component id="9ab9b" class="javax.swing.JCheckBox" binding="cbEnableEsmRemote">
+                    <constraints>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <selected value="true"/>
+                      <text value="En&amp;terprise Manager access"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <vspacer id="b4382">
                 <constraints>
-                  <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
               <grid id="50083" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -333,7 +342,10 @@
               </scrollpane>
               <component id="ee661" class="com.l7tech.console.panels.PrivateKeysComboBox" binding="privateKeyComboBox">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="100" height="-1"/>
+                    <preferred-size width="100" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties/>
               </component>
