--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AdminUserAccountPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AdminUserAccountPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="24" y="16" width="371" height="216"/>
+      <xy x="24" y="16" width="458" height="216"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -39,7 +39,9 @@
           </hspacer>
           <component id="7d652" class="javax.swing.JLabel" binding="warningLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="250" height="-1"/>
+              </grid>
             </constraints>
             <properties>
               <foreground awt-color="red"/>
