SSM-3355: Fixed by aligning the searching fields of Entity Search Parameters and Associated Logs Audit Search Parameter in the audit viewer.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28650 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LogPanelControlPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LogPanelControlPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="894" height="451"/>
+      <xy x="20" y="20" width="930" height="451"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -493,7 +493,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="4c007" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4c007" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -502,14 +502,17 @@
             <border type="empty"/>
             <children>
               <grid id="c7e0c" binding="associatedLogsSearchingPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="5" left="0" bottom="0" right="0"/>
+                <margin top="5" left="5" bottom="0" right="5"/>
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="220" height="-1"/>
+                    <preferred-size width="220" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties/>
-                <border type="etched" title="Associated Logs Search Parameters"/>
+                <border type="etched" title="Associated Logs Search Parameter"/>
                 <children>
-                  <grid id="d071a" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="d071a" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -527,18 +530,13 @@
                       </component>
                       <component id="b71b" class="javax.swing.JTextField" binding="auditCodeTextField">
                         <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <minimum-size width="80" height="-1"/>
-                            <maximum-size width="150" height="-1"/>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <minimum-size width="200" height="-1"/>
+                            <preferred-size width="200" height="-1"/>
                           </grid>
                         </constraints>
                         <properties/>
                       </component>
-                      <hspacer id="2a6c5">
-                        <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </hspacer>
                     </children>
                   </grid>
                 </children>
@@ -546,7 +544,10 @@
               <grid id="9a7ed" binding="entitySearchingPane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="5" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="440" height="-1"/>
+                    <preferred-size width="440" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties/>
                 <border type="etched" title="Entity Search Parameters"/>
@@ -607,6 +608,11 @@
                   </grid>
                 </children>
               </grid>
+              <hspacer id="371bd">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
         </children>
