--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/certProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/certProperties.form
@@ -282,9 +282,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none" title="Revocation Checking">
-                  <font swing-font="TitledBorder.font"/>
-                </border>
+                <border type="none" title="Revocation Checking"/>
                 <children>
                   <component id="6ff30" class="javax.swing.JRadioButton" binding="revocationCheckDefaultRadioButton">
                     <constraints>
