--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="22" y="44" width="682" height="753"/>
+      <xy x="22" y="44" width="682" height="866"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -565,7 +565,7 @@
               </component>
             </children>
           </grid>
-          <grid id="29b97" binding="inboundOptionsPanel" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="29b97" binding="inboundOptionsPanel" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="8" left="8" bottom="8" right="8"/>
             <constraints>
               <tabbedpane title="Inbound Options"/>
@@ -865,9 +865,14 @@
               </grid>
               <vspacer id="38e76">
                 <constraints>
-                  <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
+              <nested-form id="bedae" form-file="com/l7tech/console/panels/resources/ByteLimitPanel.form" binding="byteLimitPanel" default-binding="true">
+                <constraints>
+                  <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
             </children>
           </grid>
           <grid id="67a2b" binding="outboundOptionsPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
