--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsRoutingAssertionDialog.form
@@ -533,7 +533,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="f1c44" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="f1c44" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -543,7 +543,7 @@
                 <children>
                   <nested-form id="50c08" form-file="com/l7tech/console/panels/JmsMessagePropertiesPanel.form" binding="responseMsgPropsPanel" custom-create="true">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </nested-form>
                   <grid id="8824e" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -604,6 +604,11 @@
                       </vspacer>
                     </children>
                   </grid>
+                  <nested-form id="e0c9e" form-file="com/l7tech/console/panels/resources/ByteLimitPanel.form" binding="responseByteLimitPanel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </nested-form>
                 </children>
               </grid>
             </children>
